@@ -1375,9 +1375,9 @@ BEGIN
 
             MENUITEM "Super &Eagle",                ID_OPTIONS_FILTER_SUPEREAGLE
 
-            MENUITEM "Pixelate (Experimental)",     ID_OPTIONS_FILTER16BIT_PIXELATEEXPERIMENTAL
+            MENUITEM "Pixelate",                    ID_OPTIONS_FILTER16BIT_PIXELATEEXPERIMENTAL
 
-            MENUITEM "Motion Blur (Experimental)",  ID_OPTIONS_FILTER16BIT_MOTIONBLUREXPERIMENTAL
+            MENUITEM "Motion Blur",                 ID_OPTIONS_FILTER16BIT_MOTIONBLUREXPERIMENTAL
 
             MENUITEM "AdvanceMAME Scale2x",         ID_OPTIONS_FILTER16BIT_ADVANCEMAMESCALE2X
 
